YATC 0.9.3:
  post-install.sh:
    1. 2xclient source changed to vendor site URL.
    2. Added 2xclient version check. If version changed Changelog will be displayed. 
    3. Some output sugar added. 

YATC 0.9.2:
  yatc.py:
    1. Add support of multiple RDP backends: FreeRDP or "2X RDP client".
      Now freerdp or 2xclient argument must be specified at startup.

  post-install.sh:
    1. Add parameter to choose RDP backend.
      Now freerdp or 2xclient argument must be specified at startup.

YATC 0.9.1:
  yatc.py:
    1. Add support of "2X RDP client" as backend for RDP connection.

  post-install.sh:
    1. Add support of "2X RDP client" as backend for RDP connection.
YATC 0.8.4:
  yatc.py:
    1. Print version to  ~/.yatc/version file on startup.

  post-install.sh:
    1. Changing FreeRDP source version.

YATC 0.8.3:
  yatc.py:
    1. Added dialog to re-ask user about reboot and shutdown.
    2. Exception handling for freerdp improved. Will log Freerdp exit code and output now.
    3. Write version to log.
    4. Write version to STDOUT if '-v' command line argument specified.

  post-install.sh:
    1. YATC_REPO variable added.
    2. YATC_BRANCH switched to 'master'.

  uprgade.sh:
    1. Script for upgrade added.
    2. YATC_BRANCH switched to 'master'.

YATC 0.8.2:
  post-install.sh:
    1. Forked FreeRDP to nixargh account to freeze current state. 

YATC 0.8.1:
  yatc.py:
    1. New log path - "~/.yatc/yatc.log".
    2. New config path - "~/.yatc/yatc.conf".
    3. Crypt class moved to separate file.

  post-install.sh:
    1. YATC now has it own configuration directory under user home.
    2. YATC binary path changed.
    3. YATC lib directory added.
    4. FreeRDP branch switched to "stable-1.1".

    
YATC 0.7.5:
  post-install.sh:
    1. Adding "or" to not stop if alsa doesn't have PCM device.


YATC 0.7.4:
  post-install.sh:
    1. Fixing pulse setup.


YATC 0.7.3:
  post-install.sh:
    1. More requirements for pulseaudio added.